# robotino

./: .gitignore  README.md  RemoteAccessScript.py  robotino.sublime-project  robotino.sublime-workspace
build-RobotinoGUI-Desktop_Qt_5_7_1_GCC_64bit-Debug/: Makefile  RobotinoGUI  moc_mainwindow.cpp  ui_mainwindow.h
cob_sick_s300/ros/src/: cob_scan_filter.cpp
deployment/: fix_permissions.sh  get_vfk.sh
deployment/vfk_msb_client/: LICENSE  example_main.html
deployment/vfk_msb_client/vfk_msb_py/: msb_classes.html  msb_classes_test.py  msb_communicate.py  msb_ws4py_client.py
logistics_relay/scripts/: relay.py
robotino-ros-pkg/.svn/: all-wcprops  entries
robotino-ros-pkg/Waypoint_planner/: Pycommander.py  waypoints.txt
robotino-ros-pkg/robotino_core/: CMakeLists.txt  package.xml  start
robotino-ros-pkg/robotino_core/copied/: history
robotino-ros-pkg/robotino_core/copied/usr/local/robotino/examples/src/c++/guis/io/: BumperWidget.cpp  BumperWidget.h  CMakeLists.txt  DigitalInputWidget.cpp  DigitalInputWidget.h  DigitalOutputWidget.cpp  DigitalOutputWidget.h  MainWindow.cpp  MainWindow.h  RelayWidget.cpp  RelayWidget.h  icons.qrc  main.cpp
robotino-ros-pkg/robotino_core/copied/usr/local/robotino/examples/src/c/camera/: CMakeLists.txt  main.c
robotino-ros-pkg/robotino_description/: robotino_gazebo.launch
robotino-ros-pkg/robotino_description/urdf/: robotino.urdf
robotino-ros-pkg/robotino_local_move/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_local_move/action/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_local_move/include/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_local_move/launch/: robotino_local_move_server.launch
robotino-ros-pkg/robotino_local_move/launch/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_local_move/src/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_local_planner/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_local_planner/include/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_local_planner/src/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_msgs/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_msgs/include/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_msgs/msg/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_msgs/src/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_msgs/srv/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_navigation/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_big.yaml  local_costmap_params.yaml  recovery_behaviors.yaml  robotino.rviz
robotino-ros-pkg/robotino_navigation/config/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_navigation/launch/: amcl.yaml  gmapping.launch  navigation.launch  navigation_big.launch  navigation_config.launch
robotino-ros-pkg/robotino_navigation/launch/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_navigation/maps/: hmi.pgm  hmi.yaml  hmi_600.pgm  hmi_600.yaml  hmi_alpha.pgm  hmi_alpha.yaml  hmi_alpha2.yaml  hmi_beta.pgm  hmi_beta.yaml  hmi_big.pgm  hmi_big.yaml  iff2.yaml  nevs.yaml  new_map_iff.pgm  new_map_iff.yaml  office.pgm  office.yaml  office_bigger.pgm  office_bigger.yaml  room_map1.pgm  room_map1.yaml  sec_floor2.yaml  small_map2.pgm  try_map4.yaml  trymap4.pgm
robotino-ros-pkg/robotino_navigation/maps/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_navigation/maps/robotino3/: hmi_alpha2.pgm  iff.pgm  iff.yaml  iff2.pgm  iff3.pgm  iff3.yaml  iff_sml.yaml  map.pgm  map.yaml  my_map3.pgm  my_map3.yaml  nevs.pgm  nevs.pgm_ORIG  sec_floor.pgm  sec_floor.yaml  small_map.pgm  small_map.yaml  small_map1.pgm  small_map1.yaml  small_map2.pgm  small_map2.yaml  try_map2.pgm  try_map2.yaml  try_map3.pgm  try_map3.yaml  try_map4.pgm  trymap1.pgm  trymap1.yaml  trymap2.pgm  trymap2.yaml  (+3 more)
robotino-ros-pkg/robotino_node/: CMakeLists.txt
robotino-ros-pkg/robotino_node/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_node/include/: OdometryROS.h  RobotinoCameraNode.h  RobotinoConfigNode.h  RobotinoOdometryNode.h
robotino-ros-pkg/robotino_node/launch/: keyboard_teleop.launch  msb_ros_bridge.launch  pr2_teleop.yaml  robotino_config_node.launch  robotino_node.launch  sick.yaml  xbox360_teleop.launch
robotino-ros-pkg/robotino_node/src/: Robot_Config.cpp  RobotinoCameraNode.cpp  RobotinoConfigNode.cpp  RobotinoMappingNode.cpp  RobotinoOdometryNode.cpp  robotino_camera_node.cpp  robotino_config_node.cpp  robotino_laserrangefinder_node.cpp  robotino_mapping_node.cpp  vfk_nav_robotino.cpp
robotino-ros-pkg/robotino_safety/.svn/: all-wcprops  entries
robotino-ros-pkg/robotino_safety/launch/: robotino_safety_node.launch
robotino-ros-pkg/robotino_teleop/launch/: joystick_teleop_launch_Dockerfile  keyboard_teleop.launch
rosedge/: RefactoredRemoteAccessScript.py  RemoteAccessScript.py  requirement.txt
rosedge/basedocker/: Dockerfile  ros-entrypoint.sh
rosedge/test_cases/: createDockerContainer_test.py
vfk_msb_client/: CMakeLists.txt  package.xml
vfk_msb_client/exmpls/: dataObject_PoseStamped.json  dataObject_PoseStamped_pretty.json  event_example.json  event_example_2_pretty.json  event_example_array.json  event_example_pretty.json  register_example.json  register_example_big.json  register_example_pretty.json
vfk_msb_client/exmpls/pitasc/: AppDescription.msg  AppList.msg  vfk.launch
vfk_msb_client/exmpls/pitasc/pitasc_vfk/: CMakeLists.txt  package.xml  pitasc_vfk  setup.py
vfk_msb_client/exmpls/pitasc/pitasc_vfk/launch/: msb_pitasc_test.launch
vfk_msb_client/exmpls/pitasc/pitasc_vfk/msg/: LoadProgress.msg
vfk_msb_client/exmpls/pitasc/pitasc_vfk/src/pitasc_vfk/: vfk_app_loader.py
vfk_msb_client/launch/: msb_ros_bridge.launch
vfk_msb_client/scripts/: example_main.html  example_main.py  msb_classes.py  msb_communicate.py  msb_communicate_test.py  msb_ros_bridge.html  msb_ros_bridge.py  msb_ros_helper.html  msb_ros_helper.py  msb_ros_helper_test.py  msb_websocket_client_py.py  msb_ws4py_client.py  vfk_msb.sublime-workspace
(+2002 files in other folders)
