cmake_minimum_required(VERSION 2.6)

SET(
	NAME
	example_c_camera
)

PROJECT( ${NAME} )

IF( WIN32 )
	IF( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		STRING( REPLACE "\\" "/" ROBOTINOAPI2_DIR "$ENV{ROBOTINOAPI2_64_DIR}" )
	ELSE( CMAKE_SIZEOF_VOID_P EQUAL 8 )
		STRING( REPLACE "\\" "/" ROBOTINOAPI2_DIR "$ENV{ROBOTINOAPI2_32_DIR}" )
	ENDIF( CMAKE_SIZEOF_VOID_P EQUAL 8 )
ELSE( WIN32 )
		STRING( REPLACE "\\" "/" ROBOTINOAPI2_DIR "$ENV{ROBOTINOAPI2_DIR}" )
ENDIF( WIN32 )

IF( NOT ROBOTINOAPI2_DIR )
	IF( WIN32 )
		IF( CMAKE_SIZEOF_VOID_P EQUAL 8 )
			STRING( REPLACE "\\" "/" PROGRAMS "$ENV{ProgramFiles}" )
			SET( ROBOTINOAPI2_DIR "${PROGRAMS}/REC GmbH/robotino/api2" )
		ELSE( CMAKE_SIZEOF_VOID_P EQUAL 8 )
			STRING( REPLACE "\\" "/" PROGRAMS "$ENV{ProgramFiles(x86)}" )
			SET( ROBOTINOAPI2_DIR "${PROGRAMS}/REC GmbH/robotino/api2" )
		ENDIF( CMAKE_SIZEOF_VOID_P EQUAL 8 )
	ELSE( WIN32 )
		SET( ROBOTINOAPI2_DIR "/usr/local/robotino/api2" )
	ENDIF( WIN32 )
ENDIF( NOT ROBOTINOAPI2_DIR )

SET(
	CMAKE_MODULE_PATH
	${ROBOTINOAPI2_DIR}/cmake
)
SET(
  GLOBAL_TARGET_DIR
  ${CMAKE_CURRENT_BINARY_DIR}/target
)
FILE( MAKE_DIRECTORY ${GLOBAL_TARGET_DIR} )
FILE( MAKE_DIRECTORY ${GLOBAL_TARGET_DIR}/debug )
FILE( MAKE_DIRECTORY ${GLOBAL_TARGET_DIR}/release )

IF( WIN32 )
  SET(
    CMAKE_DEBUG_POSTFIX
    "d"
  )
ENDIF( WIN32 )

SET(
  LIBRARY_OUTPUT_PATH
  ${GLOBAL_TARGET_DIR}
)
    
SET(
  EXECUTABLE_OUTPUT_PATH
  ${GLOBAL_TARGET_DIR}
)

find_package( RobotinoAPI2 REQUIRED )

COPY_ROBOTINOAPI2_DLLS( "${GLOBAL_TARGET_DIR}/release" "${GLOBAL_TARGET_DIR}/debug" )

FILE( GLOB SRCS *.c )
FILE( GLOB HEADER *.h )

IF( WIN32 )
	SET( SRCS ${SRCS} "${CMAKE_CURRENT_SOURCE_DIR}/version.rc" )
ENDIF( WIN32 )

ADD_EXECUTABLE(
	${NAME}
	${SRCS}
	${HEADER}
)

IF( WIN32 )
	SET_TARGET_PROPERTIES( ${NAME} PROPERTIES LINK_FLAGS "/MANIFEST:NO" )

	ADD_CUSTOM_COMMAND( TARGET ${NAME} POST_BUILD
		COMMAND "mt.exe" -manifest \"${CMAKE_CURRENT_SOURCE_DIR}\\manifest.xml\" -outputresource:"$(TargetDir)$(TargetFileName)"\;\#1
		COMMENT "Adding manifest..." )
ENDIF( WIN32 )

TARGET_LINK_LIBRARIES(
	${NAME}
	${REC_ROBOTINO_API2_LIBRARY}
)

IF( UNIX )
	find_library( M_LIB m )
	TARGET_LINK_LIBRARIES(
		${NAME}
		${M_LIB}
	)
ENDIF()

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
